--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ version = "1.0.2"
 description = "A fast, rule-based CLI tool for organizing your files"
 authors = ["Benjamin Demetz"]
 license-file = "LICENSE"
+license = "GPL-3.0-only"
 readme = "README.md"
 repository = "https://github.com/Benji377/tooka"
 homepage = "https://tooka.deno.dev"
