--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -22,17 +22,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract Docker tags
-        id: meta
-        run: |
-          if [[ "${{ github.event_name }}" == "release" ]]; then
-            TAG="${GITHUB_REF#refs/tags/}"
-          else
-            TAG="latest"
-          fi
-          echo "tag=$TAG" >> $GITHUB_OUTPUT
-
       - name: Build and push Docker image
         run: |
-          docker build -t ghcr.io/${{ github.repository_owner }}/tooka:${{ steps.meta.outputs.tag }} .
-          docker push ghcr.io/${{ github.repository_owner }}/tooka:${{ steps.meta.outputs.tag }}
+          docker build -t ghcr.io/benji377/tooka:latest .
+          docker push ghcr.io/benji377/tooka:latest
