--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -10,3 +10,5 @@ linker = "riscv64-linux-gnu-gcc"
 [target.x86_64-pc-windows-msvc]
 rustflags = ["-C", "target-feature=+crt-static"]
 
+[target.x86_64-unknown-linux-musl]
+linker = "musl-gcc"
