--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,7 +37,7 @@ jobs:
               target/release/tooka*_x64-setup.exe
             build_args: ""
             cross: false
-          - platform: ubuntu-latest
+          - platform: ubuntu-22.04
             artifact_paths: |
               target/aarch64-unknown-linux-gnu/release/tooka*.deb
               target/aarch64-unknown-linux-gnu/generate-rpm/tooka*.rpm
@@ -47,7 +47,7 @@ jobs:
             sysroot: /usr/aarch64-linux-gnu/
             pkg_arch: arm64
             rust_target: aarch64-unknown-linux-gnu
-          - platform: ubuntu-latest
+          - platform: ubuntu-22.04
             artifact_paths: |
               target/armv7-unknown-linux-gnueabihf/release/tooka*.deb
               target/armv7-unknown-linux-gnueabihf/generate-rpm/tooka*.rpm
