--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,30 +43,30 @@ generate-desktop-entry = false
 [package.metadata.packager.appimage.files]
 "README.md" = "usr/share/doc/tooka/README.md"
 "LICENSE" = "usr/share/doc/tooka/LICENSE"
-"data/tooka.desktop" = "usr/share/applications/tooka.desktop"
-"data/tooka.svg" = "usr/share/icons/hicolor/scalable/apps/tooka.svg"
-"data/tooka.metainfo.xml" = "usr/share/metainfo/tooka.metainfo.xml"
+"data/io.github.tooka_org.tooka.desktop" = "usr/share/applications/io.github.tooka_org.tooka.desktop"
+"data/io.github.tooka_org.tooka.svg" = "usr/share/icons/hicolor/scalable/apps/io.github.tooka_org.tooka.svg"
+"data/io.github.tooka_org.tooka.metainfo.xml" = "usr/share/metainfo/io.github.tooka_org.tooka.appdata.xml"
 
 [package.metadata.packager.deb.files]
 "README.md" = "usr/share/doc/tooka/README.md"
 "LICENSE" = "usr/share/doc/tooka/LICENSE"
-"data/tooka.desktop" = "usr/share/applications/tooka.desktop"
-"data/tooka.svg" = "usr/share/icons/hicolor/scalable/apps/tooka.svg"
-"data/tooka.metainfo.xml" = "usr/share/metainfo/tooka.metainfo.xml"
+"data/io.github.tooka_org.tooka.desktop" = "usr/share/applications/io.github.tooka_org.tooka.desktop"
+"data/io.github.tooka_org.tooka.svg" = "usr/share/icons/hicolor/scalable/apps/io.github.tooka_org.tooka.svg"
+"data/io.github.tooka_org.tooka.metainfo.xml" = "usr/share/metainfo/io.github.tooka_org.tooka.metainfo.xml"
 
 [package.metadata.packager.pacman.files]
 "README.md" = "usr/share/doc/tooka/README.md"
 "LICENSE" = "usr/share/doc/tooka/LICENSE"
-"data/tooka.desktop" = "usr/share/applications/tooka.desktop"
-"data/tooka.svg" = "usr/share/icons/hicolor/scalable/apps/tooka.svg"
-"data/tooka.metainfo.xml" = "usr/share/metainfo/tooka.metainfo.xml"
+"data/io.github.tooka_org.tooka.desktop" = "usr/share/applications/io.github.tooka_org.tooka.desktop"
+"data/io.github.tooka_org.tooka.svg" = "usr/share/icons/hicolor/scalable/apps/io.github.tooka_org.tooka.svg"
+"data/io.github.tooka_org.tooka.metainfo.xml" = "usr/share/metainfo/io.github.tooka_org.tooka.metainfo.xml"
 
 [package.metadata.generate-rpm]
 assets = [
     { source = "target/release/tooka", dest = "/usr/bin/tooka", mode = "0755" },
     { source = "LICENSE", dest = "/usr/share/doc/tooka/LICENSE", doc = true, mode = "0644" },
     { source = "README.md", dest = "/usr/share/doc/tooka/README.md", doc = true, mode = "0644" },
-    { source = "data/tooka.desktop", dest = "/usr/share/applications/tooka.desktop", mode = "0644" },
-    { source = "data/tooka.svg", dest = "/usr/share/icons/hicolor/scalable/apps/tooka.svg", mode = "0644" },
-    { source = "data/tooka.metainfo.xml", dest = "/usr/share/metainfo/tooka.metainfo.xml", mode = "0644" }
+    { source = "data/io.github.tooka_org.tooka.desktop", dest = "/usr/share/applications/io.github.tooka_org.tooka.desktop", mode = "0644" },
+    { source = "data/io.github.tooka_org.tooka.svg", dest = "/usr/share/icons/hicolor/scalable/apps/io.github.tooka_org.tooka.svg", mode = "0644" },
+    { source = "data/io.github.tooka_org.tooka.metainfo.xml", dest = "/usr/share/metainfo/io.github.tooka_org.tooka.metainfo.xml", mode = "0644" }
 ]
