--- a/data/io.github.tooka_org.tooka.desktop
+++ b/data/io.github.tooka_org.tooka.desktop
@@ -5,6 +5,6 @@ Comment=A rule-based file sorter
 Exec=tooka
 Terminal=true
 Type=Application
-Icon=tooka
+Icon=io.github.tooka_org.tooka
 Categories=Utility;ConsoleOnly;FileTools
 StartupNotify=true
