--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
             artifact_paths: target/release/tooka*_x64.dmg
             build_args: ""
             cross: false
-          - platform: ubuntu-22.04
+          - platform: ubuntu-latest
             artifact_paths: |
               target/x86_64-unknown-linux-musl/release/tooka*_amd64.deb
               target/x86_64-unknown-linux-musl/release/tooka*_x86_64.AppImage
@@ -40,7 +40,7 @@ jobs:
               target/release/tooka*_x64-setup.exe
             build_args: ""
             cross: false
-          - platform: ubuntu-22.04
+          - platform: ubuntu-latest
             artifact_paths: |
               target/aarch64-unknown-linux-gnu/release/tooka*.deb
               target/aarch64-unknown-linux-gnu/generate-rpm/tooka*.rpm
@@ -50,7 +50,7 @@ jobs:
             sysroot: /usr/aarch64-linux-gnu/
             pkg_arch: arm64
             rust_target: aarch64-unknown-linux-gnu
-          - platform: ubuntu-22.04
+          - platform: ubuntu-latest
             artifact_paths: |
               target/armv7-unknown-linux-gnueabihf/release/tooka*.deb
               target/armv7-unknown-linux-gnueabihf/generate-rpm/tooka*.rpm
@@ -100,7 +100,7 @@ jobs:
           fi
 
       - name: Package RPM
-        if: matrix.platform == 'ubuntu-22.04'
+        if: matrix.platform == 'ubuntu-latest'
         run: |
           if [ "${{ matrix.cross }}" = "true" ]; then
             cargo generate-rpm --target=${{ matrix.rust_target }}
