--- a/.github/workflows/winget.yaml
+++ b/.github/workflows/winget.yaml
@@ -11,6 +11,6 @@ jobs:
         with:
           identifier: Benji377.Tooka
           fork: Benji377
-          installers-regex: '\.msi$' # Only .exe files
+          installers-regex: '\.msi$' # Only .msi file
           token: ${{ secrets.WINGETCREATE_TOKEN }}
 
