--- a/.github/workflows/crates.yml
+++ b/.github/workflows/crates.yml
@@ -23,4 +23,4 @@ jobs:
       - name: Publish to crates.io
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-        run: cargo publish --verbose
+        run: cargo publish --verbose --allow-dirty
