--- a/.github/workflows/winget.yaml
+++ b/.github/workflows/winget.yaml
@@ -16,6 +16,8 @@ jobs:
         run: |
           "tag=$((gh api repos/${{ github.repository }}/releases/latest | ConvertFrom-Json).tag_name)" >> $env:GITHUB_OUTPUT
         shell: pwsh
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - uses: vedantmgoyal9/winget-releaser@main
         with:
